--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,18 @@
-# Core app & web
 streamlit
 requests
 beautifulsoup4
-langchain==0.0.335
-# LangChain ecosystem
 langchain
 langchain-community
+langchain-core
 faiss-cpu
-beautifulsoup4
-# AI/ML models
 torch
 transformers
-
-# PDF and text utilities
 PyPDF2
 nltk
-
-# Audio processing
 speechrecognition
 pydub
-
-# YouTube transcript extraction
 youtube-transcript-api
-
-# Data utilities
 pydantic
 numpy
 pandas
-
-# Others used in the script
 tqdm
